# gst-gzdec

./: .gitignore  README  README.md  clean.sh  configure.ac  test.sh  uncrustify.cfg
src/: Makefile.am  gstgzdec.c  gstgzdec.h  gstgzdec_bzipdecstream.h  gstgzdec_compat.h  gstgzdec_priv.h  gstgzdec_zipdecstream.h  gstgzdec_zipstream.h
test/: test.tiff.bzip
